fix(web-components): add scrollbar to content area on dialog to make it easier to scroll
Make scrollbar appear on content area on dialog when content overflows to make it easier to scroll
through the content.

.#2868

--- a/packages/web-components/src/components/ic-dialog/ic-dialog.css
+++ b/packages/web-components/src/components/ic-dialog/ic-dialog.css
@@ -103,15 +103,9 @@
 }
 
 .content-area {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
   padding: 0 var(--ic-space-md);
   margin: 0;
   overflow-y: auto;
-}
-
-.content-area::-webkit-scrollbar {
-  display: none;
 }
 
 #dialog-content {
